아이콘, symbol_list, server_name

--- a/coinchat_frontend_vue/default.conf
+++ b/coinchat_frontend_vue/default.conf
@@ -5,7 +5,7 @@ upstream coinchat-backend {
 server {
     listen       80;
     listen  [::]:80;
-    server_name  localhost;
+    server_name  coinchat.work;
 
     #access_log  /var/log/nginx/host.access.log  main;
 
